--- a/inst/reports/batchqc_report.Rmd
+++ b/inst/reports/batchqc_report.Rmd
@@ -14,6 +14,7 @@ output:
 ```{r, echo=FALSE}
 shinyInput <- getShinyInput()
 dat <- shinyInput$data
+lcounts <- log2CPM(dat)$y
 report_option_vector <- shinyInput$report_option_vector
 eval_cell_1 = (report_option_vector[1]=="1")
 ```
@@ -34,7 +35,7 @@ eval_cell_1_1 = (report_option_vector[1]=="1")
 `r if (eval_cell_1_1) 'Boxplots for all values for each of the samples and are colored by batch membership.'`
 
 ```{r eval=eval_cell_1_1, echo=FALSE, message=FALSE, fig.width = 8, fig.height = 8}
-boxplot(log2CPM(dat)$y,col=as.numeric(as.factor(batch)),main="Sample Boxplots (colored by batch)",xlab="Samples")
+boxplot(lcounts,col=as.numeric(as.factor(batch)),main="Sample Boxplots (colored by batch)",xlab="Samples")
 ```
 
 ```{r, echo=FALSE}
@@ -72,7 +73,7 @@ eval_cell_5 = (report_option_vector[5]=="1")
 `r if (eval_cell_5) '================================='`
 `r if (eval_cell_5) 'This is a plot of the top two principal components and showing the variation with respect to batch effects and different conditions.'`
 ```{r, eval=eval_cell_5, echo=FALSE, message=FALSE, fig.width = 8, fig.height = 8}
-pca <- batchqc_pca(dat, batch=batch, mod=mod)
+pca <- batchqc_pca(lcounts, batch=batch, mod=mod)
 shinyInput <- getShinyInput()
 shinyInput <- c(shinyInput, list("pc"=data.frame(pca$x), "vars"=pca$sdev^2))
 setShinyInput(shinyInput)
@@ -84,7 +85,7 @@ eval_cell_6 = (report_option_vector[6]=="1")
 `r if (eval_cell_6) 'PCA Proportion Variation and correlation'`
 `r if (eval_cell_6) '========================================'`
 ```{r, eval=eval_cell_6, echo=FALSE, message=FALSE, fig.width = 8, fig.height = 8}
-res <- batchqc_pca_svd(dat, batch=batch, mod=mod)
+res <- batchqc_pca_svd(lcounts, batch=batch, mod=mod)
 ```
 
 ```{r, echo=FALSE}
@@ -104,7 +105,7 @@ eval_cell_8 = (report_option_vector[8]=="1")
 `r if (eval_cell_8) '============'`
 `r if (eval_cell_8) 'This is a plot showing whether parametric or non-parameteric prior is appropriate for this data. It also shows the Kolmogorov-Smirnov test comparing the parametric and non-parameteric prior distribution.'`
 ```{r, eval=eval_cell_8, echo=FALSE, message=FALSE}
-kstest <- combatPlot(dat, batch=batch, mod=mod)
+kstest <- combatPlot(lcounts, batch=batch, mod=mod)
 print(kstest)
 ```
 
