--- a/inst/reports/batchqc_report.Rmd
+++ b/inst/reports/batchqc_report.Rmd
@@ -243,15 +243,15 @@ lcounts_adj <- batchQC_condition_adjusted(shinyInput$lcounts, batch, condition)
 bf <- as.factor(shinyInput$batch)
 pval <- batchQC_shapeVariation(lcounts_adj, batch, plot = TRUE, groupCol = 
     rainbow(nlevels(bf))[bf])
-cat(paste("Note: Overall p-value is calculated for the",
-    "variation across samples on the overall measure",
-    "across genes. Pairwise p-value is calculated for the",
-    "pairwise variation of each gene between batches",
+cat(paste("Note: Sample-wise p-value is calculated for the",
+    "variation across samples on the measure",
+    "across genes. Gene-wise p-value is calculated for the",
+    "variation of each gene between batches",
     "on the measure across each batch. If the data is", 
-    "quantum normalized, then the overall measure across",
-    "genes is same for all samples and pairwise p-value",
-    "is a good measure, which also discounts very small", 
-    "variations.", sep=" "))
+    "quantum normalized, then the Sample-wise measure across",
+    "genes is same for all samples and Gene-wise p-value",
+    "is a good measure.", 
+    sep=" "))
 ```
 
 ```{r, echo=FALSE}
