--- a/vignettes/BatchQC_examples.Rmd
+++ b/vignettes/BatchQC_examples.Rmd
@@ -17,13 +17,14 @@ nbatch <- 3
 ncond <- 2
 npercond <- 10
 data.matrix <- rnaseq_sim(ngenes=50, nbatch=nbatch, ncond=ncond, npercond=
-    npercond, ggstep=5, bbstep=15000, ccstep=10000, bvarstep=2, seed=1234)
+    npercond, basemean=10000, ggstep=50, bbstep=20000, ccstep=8000, 
+    basedisp=100, bdispstep=-10, swvar=1000, seed=1234)
 batch <- rep(1:nbatch, each=ncond*npercond)
 condition <- rep(rep(1:ncond, each=npercond), nbatch)
 batchQC(data.matrix, batch=batch, condition=condition, 
         report_file="batchqc_report.html", report_dir=".", 
         report_option_binary="111111111",
-        view_report=FALSE, interactive=TRUE)
+        view_report=FALSE, interactive=TRUE, batchqc_output=TRUE)
 
 ```
 
