Changing the parameter for the example simulated dataset to lower the batch and condition variation for SVA to work well
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_3_3/madman/Rpacks/BatchQC@117825 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/vignettes/BatchQC_usage_advanced.Rmd
+++ b/vignettes/BatchQC_usage_advanced.Rmd
@@ -30,14 +30,14 @@ nbatch <- 3
 ncond <- 2
 npercond <- 10
 ngenes <- 50
-ggstep=5
-bbstep=15000
-ccstep=10000
+ggstep <- 50
+bbstep <- 2000
+ccstep <- 800
 
 basedisp <- 100
 bdispstep <- -10
-data.matrix <- rnaseq_sim(ngenes=50, nbatch=nbatch, ncond=ncond, npercond=
-    npercond, basemean=10000, ggstep=50, bbstep=20000, ccstep=8000, 
+data.matrix <- rnaseq_sim(ngenes=ngenes, nbatch=nbatch, ncond=ncond, npercond=
+    npercond, basemean=10000, ggstep=ggstep, bbstep=bbstep, ccstep=ccstep, 
     basedisp=basedisp, bdispstep=bdispstep, swvar=1000, seed=1234)
 
 # genes 10 to 25 affected by an independent unobserved factor
